--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h3>I'm in the app component</h3>
-      <hr>
-      <app-servers></app-servers>
-      <!--<app-udemy></app-udemy>-->
+      <app-recipeBookFeature></app-recipeBookFeature>
     </div>
   </div>
 
