--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
+<app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-md-12">
       <app-recipeBookFeature></app-recipeBookFeature>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
-
 </div>
