--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,20 @@
-<nav class="navbar navbar-default" role = "navigation">
+<nav class="navbar navbar-expand-sm bg-light"><!-- HAVE NAVBAR EXTEND WHOLE PAGE-->
   <div class="container-fluid">
     <div class="navbar-header">
       <a href="# " class='navbar-brand'>Recipe Book</a>
     </div>
 
     <div class="navbar-collapse" data-toggle = "collapse" >
-      <ul class="nav navbar-nav" >
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping list</a></li>
+      <ul class=" navbar-nav" >
+        <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Shopping list</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
+      <ul class="nav navbar-nav ml-auto"><!--MOVE ITEM TO THE RIGHT *ML-AUTO-->
+        <li class="dropdown show">
+          <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a href="#" class="dropdown-item">Save Data</a></li>
+            <li><a href="#" class="dropdown-item">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
